Fix debug focus not showing on all nodes

--- a/app/src/main/resources/io/xpipe/app/resources/style/style.css
+++ b/app/src/main/resources/io/xpipe/app/resources/style/style.css
@@ -1,5 +1,5 @@
 /* For development
-*:focused {
+.root *:focused {
     -fx-border-width: 1;
     -fx-border-color: red;
 }
